fix: password input toggle visibility icon

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,7 +105,6 @@ form #show_icon {
   transform: translate(0, -45%);
   max-width: 2.6rem;
   max-height: 2.6rem;
-  background-color: #111;
   font-size: 1.3em;
 }
 #content {
